# HPL1Engine

./: .gitignore  CMakeLists.txt
include/impl/: CGProgram.h  LowLevelGraphicsSDL.h  LowLevelInputSDL.h  OpenALSoundData.h  SDLBitmap2D.h  SDLFontData.h  SDLPixelFormat.h  SDLTexture.h
sources/impl/: KeyboardSDL.cpp  LowLevelGraphicsSDL.cpp  LowLevelInputSDL.cpp  LowLevelResourcesSDL.cpp  LowLevelSystemSDL.cpp  MouseSDL.cpp  SDLGameSetup.cpp
tests/: SDLMain.m
tests/SpotLightTest/: SpotLightTest.cpp
